fix: cap concurrent GeoData Imagery API calls in draft-annotations batching
The virtual-thread-per-area-picture fan-out introduced to fix the N+1
traded sequential latency for a concurrency burst: GeoData Imagery API
runs behind a Lambda with a low reserved concurrency, so a page of
draft annotations spanning several area pictures now trips
"429 ReservedFunctionConcurrentInvocationLimitExceeded" in production.
Bound the lookups to a small fixed thread pool instead of unbounded
virtual threads, capping in-flight calls to the Imagery API regardless
of page size.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>